RESOLVED FIXED38948
Chromium regression in user gesture handling
https://bugs.webkit.org/show_bug.cgi?id=38948
Summary Chromium regression in user gesture handling
Chris Evans
Reported 2010-05-11 16:48:54 PDT
Attachments
Fix logic. (4.12 KB, patch)
2010-05-11 17:06 PDT, Chris Evans
no flags
Chris Evans
Comment 1 2010-05-11 17:06:50 PDT
Created attachment 55778 [details] Fix logic.
Chris Evans
Comment 2 2010-05-11 17:07:46 PDT
Simple enough. This patch restores the original logic but with Adam's enum elegance :) BTW, please r+ it but don't cq+ it. I want to test my new commit powers...
Adam Barth
Comment 3 2010-05-11 17:11:16 PDT
Comment on attachment 55778 [details] Fix logic. Is this not testable?
Chris Evans
Comment 4 2010-05-11 17:26:23 PDT
Yeah, it's not really testable as a layout test. Chromium does the popup blocking completely differently to the WebKit built-in blocker. Chromium actually runs with the WebKit blocker _disabled_ and does blocking in the UI. I have a TODO to add a Chromium UI test for all these blocker corner cases once I've fixed them all.
WebKit Commit Bot
Comment 5 2010-05-11 18:12:15 PDT
Comment on attachment 55778 [details] Fix logic. Rejecting patch 55778 from commit-queue. cevans@google.com does not have committer permissions according to http://trac.webkit.org/browser/trunk/WebKitTools/Scripts/webkitpy/common/config/committers.py. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in WebKitTools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). Due to bug 30084 the commit-queue will require a restart after your change. Please contact eseidel@chromium.org to request a commit-queue restart. After restart the commit-queue will correctly respect your committer rights.
WebKit Commit Bot
Comment 6 2010-05-14 04:21:26 PDT
Comment on attachment 55778 [details] Fix logic. Clearing flags on attachment: 55778 Committed r59462: <http://trac.webkit.org/changeset/59462>
WebKit Commit Bot
Comment 7 2010-05-14 04:21:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.