2010-05-14  Chris Evans  <cevans@chromium.org>

Reviewed by Adam Barth.

        Chromium-specific fix to prevent zombie infobars.

        https://bugs.webkit.org/show_bug.cgi?id=38948

        * bindings/v8/ScriptController.cpp
        (WebCore::ScriptController::processingUserGesture):
          Require a more definite "no" signal.
        * loader/RedirectScheduler.cpp:
        (WebCore::ScheduledFormSubmission::fire):
          Use a very strong yes / no signal; no need for "possible" here.
        * dom/UserGestureIndicator.h:
        * dom/UserGestureIndicator.cpp:
          Adapt to tri-state: definitely yes; definitely no; not sure.

Canonical link: https://commits.webkit.org/50616@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59462 268f45cc-cd09-0410-ab3c-d52691b4dbfc