WebCore/bindings/v8/ScriptController.cpp
@@ -158,7 +158,7 @@ bool ScriptController::processingUserGesture(DOMWrapperWorld*) const
     // No script is running, so it is user-initiated unless the gesture stack
     // explicitly says it is not.
     if (!activeFrame)
-        return UserGestureIndicator::processingUserGesture();
+        return UserGestureIndicator::getUserGestureState() != DefinitelyNotProcessingUserGesture;
 
     V8Proxy* activeProxy = activeFrame->script()->proxy();
 
